# homework_web_9

./: authors.json  main.py  pyproject.toml  quotes.json
